--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "fast-csv": "^4.3.6",
     "mongoose": "^6.3.4",
     "uuid": "^8.3.2"
   },
